14-Dec Updates: - implemented floor plan retrival from database - new endpoint for toggle ON/OFF for background service
