# handlers/health.go
@@ -1,6 +1,9 @@
 package handlers
 
-import "github.com/gofiber/fiber/v2"
+import (
+	"github.com/SoNim-LSCM/TKOH_OMS/service"
+	"github.com/gofiber/fiber/v2"
+)
 
 // @Summary Show the status of server.
 // @Description get the status of server.
@@ -11,4 +14,18 @@ import "github.com/gofiber/fiber/v2"
 // @Router /health [get]
 func HandleHealthCheck(c *fiber.Ctx) error {
 	return c.SendString("OK")
+}
+
+// @Summary Toggle Background Service.
+// @Description Toggle Background Service
+// @Tags Health
+// @Accept */*
+// @Produce plain
+// @Success 200 "Background service is ON / OFF"
+// @Router /toggleBackgroundService [get]
+func ToggleBackgroundService(c *fiber.Ctx) error {
+	if service.ToggleBackgroundInitOrder() {
+		return c.SendString("Background service is ON")
+	}
+	return c.SendString("Background service is OFF")
 }
